# ucapi_cortex-m

./: README.md  meson.build
devconf/: core.toml  cortex_m.dc  debug.toml  ictr.toml  nvic.toml  scb.toml  stir.toml  systick.toml
include/: bkpt.h  core_init.h  debug.h  exceptions.h  handlers.h  meson.build  nmi.h  nvic.h  priorities.h  reset.h  system_timer_if.h  systick.h  vector_table.h
include/instructions/: bkpt.h
include/interrupts/: debug.h  exceptions.h  nmi.h  reset.h  supervisor.h  systick.h
include/registers/: debug.h  ictr.h  nvic.h  scb.h  stir.h  systick.h
link/: cortex-m.ld  meson.build
source/: breakpoint.c  core_init.c  debug.c  debug_system.c  exceptions.c  meson.build  nmi.c  nvic.c  reset.c  supervisor.c  systick.c  vector.c  vector_table.c
source/ucapi/: meson.build  system_timer.c  systick_system_timer.c
